--- a/hello.html
+++ b/hello.html
@@ -1,10 +1,12 @@
 <<!DOCTYPE html>
 <html>
  <head>
+<h1>Welcome to My website</h1>
  </head>
  <body>
    Hello World
    <h1>Hello World</h1>
+<h2>Hello you</h2>
    <p>Hello World</p>
  </body>
 </html>
