--- a/hello.html
+++ b/hello.html
@@ -5,7 +5,7 @@
  </head>
  <body>
    Hello World
-   <h1 style="color:blue">Hello World</h1>
+   <h1 style="color:blue;">Hello World</h1>
 <h2>Hello you</h2>
    <p>Hello World</p>
  </body>
