--- a/hello.html
+++ b/hello.html
@@ -1,6 +1,11 @@
 <<!DOCTYPE html>
 <html>
  <head>
+   <style media="screen">
+     h1 {
+       color:blue;
+     }
+   </style>
 <h1>Welcome to My website</h1>
  </head>
  <body>
